@@ -5,6 +5,9 @@
 # $Id$
 #
 # $Log$
+# Revision 1.5  2004/01/29 18:19:58  jimmyo
+# Made Munin compatible with perl 5.005_03 (patch by Lupe Christoph) (SF#884622)
+#
 # Revision 1.4  2004/01/29 17:40:10  jimmyo
 # Fixed pod typos patched by Lupe Christoph (SF#884092)
 #
@@ -741,7 +744,8 @@ sub logger {
   my ($comment) = @_;
   my $now = strftime "%b %d %H:%M:%S", localtime;
   print ("$now - $$: $comment\n") if $print_stdout;
-  printflush LOG ("$now - $$: $comment\n");
+  print LOG ("$now - $$: $comment\n");
+  flush LOG;
 }
 
 
